@@ -26,8 +26,10 @@ apport (0.24) edgy; urgency=low
     apport_utils.py now. Closes: LP#62542
   * apport: Do not intercept KeyboardInterrupt as unhandled exception (only
     useful for command line debugging, though).
+  * problem_report.py: Add test case for appending new data to an existing
+    report, fix write() function to not rely on an existing ProblemType key.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 29 Sep 2006 10:50:03 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 29 Sep 2006 12:21:04 +0200
 
 apport (0.23) edgy; urgency=low
 
